# shadowvpn

./: .dockerignore  Cargo.toml  README.md
.claude/skills/shadowvpn-deploy-client/: SKILL.md
.claude/skills/shadowvpn-deploy-server/: SKILL.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.bench  Dockerfile.http3  Dockerfile.policy  bench-client.sh  bench-lib.sh  bench-server.sh  client-auto.json  client.json  docker-compose.bench.yml  docker-compose.http3.yml  docker-compose.multi.yml  docker-compose.policy.yml  docker-compose.yml  policy-client.json  run-bench.sh  run-client-auto.sh  run-client-multi.sh  run-dns.sh  run-e2e-http3.sh  run-e2e-multi.sh  run-e2e-policy.sh  run-e2e.sh  run-echo.sh  run-server-auto.sh  run-server-multi.sh  run-server-nat.sh  run-server.sh  server.json  test-client-http3.sh  test-client-policy.sh  test-client.sh
docker/policy/: chnroute.txt  gfwlist.txt
docs/: BENCHMARKS.md  index.html
scripts/: README.md  shadowvpn-client.cmd  shadowvpn-client.ps1
src/: config.rs  control.rs  crypto.rs  lib.rs  nat.rs  net.rs  obfs.rs  pool.rs  protocol.rs  tun_device.rs  uri.rs
src/policy/: cache.rs  chnroute.rs  dns.rs  dnsconf.rs  geoip.rs  gfwlist.rs  mod.rs  proxy.rs  route.rs  setup.rs
tests/: auto_ip.rs
